# simdstr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bm_str.cpp
examples/: CMakeLists.txt  README.md
examples/constant/: CMakeLists.txt  constant.cpp
examples/loopcombined/: CMakeLists.txt  bm_loopcombined.cpp
examples/mask/: CMakeLists.txt  bm_mask.cpp
examples/matrix_transpose/: CMakeLists.txt  bm_matrix.cpp
examples/memcopy/: CMakeLists.txt  bm_memcopy.cpp
examples/shuffle/: CMakeLists.txt  bm_shuffle.cpp  shuffle.h
examples/simd_itoa/: CMakeLists.txt  bm_itoa.cpp
include/: naivestr.h  simdstr.h
src/: naivestr.c  simdstr.c
tests/: CMakeLists.txt  test_str.cpp
